re PR fortran/52038 (fortran bootstrap failure: no previous prototype for 'symbol_as')

2012-01-29  Tobias Burnus  <burnus@net-b.de>

        PR fortran/52038
        * resolve.c (symbol_as): Remove unused, accidentally
        added function.

From-SVN: r183675